# fastapi_project

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 58a95cdc93df_initial.py
src/: consts.py  database.py  settings.py
src/users/: auth.py  db_utils.py  models.py  routers.py  service.py  shemes.py
